--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install tools
+    - name: Install build tools
       run: sudo apt-get update && sudo apt-get install -y build-essential
 
-    - name: Build
-      run: make
+    - name: Build example
+      run: make example
+
+    - name: Build test
+      run: make test
 
     - name: Run example
       run: ./examples/example_threadpool
 
     - name: Run test
       run: ./test/test_threadpool
+
