--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,15 @@ jobs:
     - name: Install build tools
       run: sudo apt-get update && sudo apt-get install -y build-essential
 
-    - name: Build example
+    - name: Build example (Makefile)
       run: make example
-
-    - name: Build test
-      run: make test
 
     - name: Run example
       run: ./examples/example_threadpool
 
+    - name: Build test (direct)
+      run: gcc -Wall -Wextra -pthread -Iinclude test/test_threadpool.c src/threadpool.c -o test_threadpool
+
     - name: Run test
-      run: ./test/test_threadpool
+      run: ./test_threadpool
 
